# flux-kontext-sdk

./: CHANGELOG.md  CONTRIBUTING.md  README.md
go/: README.md  go.mod
go/fluxkontext/: client.go  client_test.go  contract_gen.go  slug.go  types.go
java/: README.md  settings.gradle.kts
java/runapi-flux-kontext/: build.gradle.kts
java/runapi-flux-kontext/src/main/java/ai/runapi/fluxkontext/: FluxKontextClient.java
java/runapi-flux-kontext/src/main/java/ai/runapi/fluxkontext/resources/: FluxkontextResource.java  TextToImageResource.java
java/runapi-flux-kontext/src/main/java/ai/runapi/fluxkontext/types/: CompletedTextToImageResponse.java  FluxkontextParamUtils.java  FluxkontextValue.java  Image.java  ImagesTaskResponse.java  TextToImageModel.java  TextToImageParams.java  TextToImageResponse.java
java/runapi-flux-kontext/src/test/java/ai/runapi/fluxkontext/: FluxKontextClientTest.java  FluxKontextLiveApiSmokeTest.java  FluxKontextLocalApiSmokeTest.java
js/: README.md  package.json
js/skills/flux-kontext/: README.md  SKILL.md
js/src/: client.ts  contract_gen.ts  index.ts  types.ts
js/src/resources/: text-to-image.ts
js/tests/unit/: client.test.ts  text-to-image.test.ts
python/: README.md  pyproject.toml
python/src/runapi/flux_kontext/: __init__.py  client.py  contract_gen.py  types.py
python/src/runapi/flux_kontext/resources/: text_to_image.py
python/tests/: test_client.py
ruby/: README.md  runapi-flux-kontext.gemspec  runapi-flux_kontext.gemspec
ruby/examples/: flux_kontext_example.rb
ruby/lib/: runapi-flux_kontext.rb
ruby/lib/runapi/: flux_kontext.rb
ruby/lib/runapi/flux_kontext/: client.rb  contract_gen.rb  types.rb
ruby/lib/runapi/flux_kontext/resources/: text_to_image.rb
ruby/spec/: spec_helper.rb
ruby/spec/runapi/flux_kontext/: client_spec.rb
ruby/spec/runapi/flux_kontext/resources/: text_to_image_spec.rb
