[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runapi-flux-kontext"
version = "0.1.0"
description = "Flux Kontext text-to-image and image-editing client for RunAPI"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "RunAPI", email = "contact@runapi.ai" }]
keywords = ["runapi", "flux", "flux-kontext", "text-to-image", "ai", "sdk"]
dependencies = ["runapi-core"]

[project.urls]
Homepage = "https://runapi.ai/models/flux-kontext"
Documentation = "https://runapi.ai/docs#sdk-flux-kontext"

[tool.hatch.build.targets.wheel]
packages = ["src/runapi"]

[tool.uv]
package = true

[tool.uv.sources]
runapi-core = { workspace = true }

[dependency-groups]
dev = ["pytest>=8"]

[tool.runapi]
slug = "flux-kontext"
