[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runapi-flux-kontext"
version = "0.2.0"
description = "RunAPI Flux Kontext SDK for text-to-image and source-image editing workflows in JavaScript, Python, Ruby, Go, Java, and PHP"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "RunAPI", email = "contact@runapi.ai" }]
keywords = ["runapi", "runapi-ai", "flux-kontext", "api", "sdk", "typescript", "python", "ruby", "golang", "java", "maven", "gradle", "image-generation", "text-to-image", "image-api", "flux-kontext-api"]
dependencies = ["runapi-core>=0.3.0"]

[project.urls]
Homepage = "https://runapi.ai/models/flux-kontext"
Documentation = "https://runapi.ai/docs#sdk-flux-kontext"
Source = "https://github.com/runapi-ai/flux-kontext-sdk"
Issues = "https://github.com/runapi-ai/flux-kontext-sdk/issues"
Changelog = "https://github.com/runapi-ai/flux-kontext-sdk/blob/main/CHANGELOG.md"
"Release Notes" = "https://github.com/runapi-ai/flux-kontext-sdk/releases/tag/python%2Fv0.2.0"

[tool.hatch.build.targets.wheel]
packages = ["src/runapi"]

[tool.uv]
package = true

[dependency-groups]
dev = ["pytest>=8"]

[tool.runapi]
slug = "flux-kontext"
